--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
       <h1>I am Mrudul Dhawley</h1>
       <p>AI / ML & Software Developer</p>
       <p>
-        <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
+        <a class="fa-icon fa-icon-2x" href="mailto: mruduldhawley1@gmail.com" title="">
           <img src="./icons8-email-96 (1).svg" height = 29>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
+        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/mruduldhawley/" title="">
           <i class="fa fa-linkedin"></i>
+        </a>
+        <a class="fa-icon fa-icon-2x" href="https://github.com/Mruduldhawley" title="">
+          <i class="fa fa-github"></i>
         </a>
       </p>
     </div>
@@ -75,7 +78,7 @@
             <div class="row">
               <div class="col-md-4">
                 <a href="https://github.com/avi0010/Monocular-depth-estimation"><img src="./assets/images/depth.png" class="img-responsive" alt="">
-                <h3 class="h5">Ongoing</h3></a>
+                <h3 class="h5">Monocular Depth Estimation</h3></a>
                 <p>June 2023 - Current</p>
               </div>
               <div class="col-md-4">
