--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     text-align: justify;
   }
 </style>
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
+<script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">
     (function() {
-      emailjs.init('nK7xxGgMyXL-41MSb'); // Replace with your EmailJS User ID
+      emailjs.init('XTmWE9_CBit0Yyihx'); // Replace with your EmailJS User ID
     })();
   </script>
 </head>
@@ -296,6 +297,7 @@
 
   <script>
     function sendEmail() {
+
       const email = document.getElementById('email').value;
       const subject = document.getElementById('subject').value;
       const message = document.getElementById('message').value;
@@ -306,6 +308,7 @@
         subject: subject,
         message: message
       };
+      alert(email, subject, message)
 
       emailjs.send('service_fmdcfuu', 'template_gr0zhjk', templateParams)
         .then((response) => {
