--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="education-experience">
                   <small class="date">2019 - 2023</small>
                   <h3 class="h5 date-title">B.Tech in Computer Science</h3>
-                  <a href="https://www.iiitp.ac.in/"><p>Indian Institute of Information Technology, Pune</p></a>
+                  <a href="https://www.iiitp.ac.in/">Indian Institute of Information Technology, Pune</a>
 
                 </div>
                 
@@ -158,7 +158,7 @@
                 <div class="education-experience">
                   <small class="date">2024 - Current</small>
                   <h3 class="h5 date-title">MSc in Advanced Computer Science</h3>
-                  <a href="https://www.manchester.ac.uk/"><p>University of Manchester, Manchester</p></a>
+                  <a href="https://www.manchester.ac.uk/">University of Manchester, Manchester</a>
                 </div>
               </div>
             </div>
