--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
         <a class="fa-icon fa-icon-2x" href="https://github.com/Mruduldhawley" title="">
           <i class="fa fa-github"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://github.com/Mruduldhawley" title="">
+        <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/mrudul.dhawley/?utm_source=qr&igsh=NW83NTV0eXE0OTdh" title="">
           <i class="fa fa-instagram"></i>
         </a>
-      
       </p>
     </div>
   </header>
@@ -327,8 +326,8 @@
       <div class="col-xs-12">
         <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
         
-        <p>©All right reserved. Design <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-        <p>
+        <p>Mrudul Dhawley <a href="http://www.mashup-template.com/" title="Create website with free html template"></a><a href="https://unsplash.com/" title="Beautiful Free Images"></a></p>
+        <!-- <p>
           <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
             <i class="fa fa-facebook"></i>
           </a>
@@ -344,7 +343,7 @@
           <a class="fa-icon fa-icon-2x" href="https://vimeo.com/" title="">
             <i class="fa fa-vimeo"></i>
           </a>
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
