--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   .exp{
     text-align: justify;
   }
+  @media (max-width: 991px){
+  #my_img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    width: 50%;
+  }
+}
 </style>
 <script type="text/javascript"
   src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
@@ -72,7 +81,7 @@
             <h2>About me</h2>
             <div class="row">
               <div class="col-md-4">
-                <p><img src="./assets/images/WhatsApp Image 2024-03-18 at 17.18.55 copy.jpeg" class="img-responsive myimg" alt=""></p>
+                <p><img src="./assets/images/WhatsApp Image 2024-03-18 at 17.18.55 copy.png" class="img-responsive" id="my_img"></p>
               </div>
               <div class="col-md-8">
               <p class="exp">I am an enthusiastic and passionate professional with over 2 years of experience in Computer Technology, specializing in Artificial Intelligence, Machine Learning, Data Science, and Software Development. My expertise lies in leveraging advanced technical skills to solve complex problems, optimize processes, and drive innovation. With a robust foundation in both theoretical and practical aspects of modern technology, I am committed to continuous learning and staying at the forefront of industry advancements."</p>
